<resources>
    <string name="app_name">Kolsa</string>
    <string name="search_hint">Поиск</string>
    <string name="apply">Применить</string>
    <string name="clear">Сбросить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="all">Все</string>
    <string name="done">Выполненные</string>
    <string name="undone">Невыполненные</string>
    <string name="default_sort">По умолчанию</string>
    <string name="earlier_sort">Сначала ранние</string>
    <string name="later_sort">Сначала поздние</string>
    <string name="header">Заголовок</string>
    <string name="description">Описание</string>
    <string name="type1">Тип 1</string>
    <string name="type2">Тип 2</string>
    <string name="type3">Тип 3</string>
</resources>