<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/defaultSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:layoutDirection="rtl"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/default_sort"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/earlier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:layoutDirection="rtl"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/earlier_sort"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:layoutDirection="rtl"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/later_sort"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>